--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			
 		</nav>
 		<div id="bottom-1">
-			<p style="color:rgb(25, 0, 255);"> Typeset in IBM Plex Mono. Copyleft 2020. <br> Made with &#9829 in Kochi.</p>
+			<p style="color:rgb(25, 0, 255);"> <a href="https://www.instagram.com/raamanaya/">Instagram</a> | <a href="https://www.youtube.com/channel/UCUGwSSzDtLusBeigGUcYBaw?view_as=subscriber"> YouTube </a> <br>Typeset in IBM Plex Mono. Copyleft 2020. <br> Made with &#9829 in Kochi.</p>
 		  </div>
 		
 
