--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="demo-1">
 	<main>
 	<nav class="menu">
-			<p>Hi! I’m a designer looking for the next cool project to get my hands dirty with.<br> 
+			<p>Hi! I design stuff, and am always on the lookout for new projects I can sink my teeth into. <br> 
 				I have worked on—</p>
 			<div class="menu__item">
 				<a class="menu__item-link">Publication Design</a>
