--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="https://use.typekit.net/zhq0vyf.css">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
-	<!--<script>
-	document.documentElement.className = "js";
-	var supportsCssVars = function() { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e };
-	supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");
-	</script>
-	<!--script src="//tympanus.net/codrops/adpacks/analytics.js"></script-->
+	
 </head>
+
+<div id="bio">
+	<p>Hi! I design stuff!<br>
+		I have worked with—</p>
+</div>
+
 
 <body class="demo-1">
 	<main>
 	<nav class="menu">
-			<p>Hi! I design stuff, and am always on the lookout for new projects I can sink my teeth into. <br> 
-				I have worked on—</p>
+			
 			<div class="menu__item">
 				<a class="menu__item-link">Publication Design</a>
 				<img class="menu__item-img" src="img/NLU_anim.gif" alt="Some image"/>
@@ -56,20 +56,24 @@
 					</div>
 				</div>
 			</div>
-			
-			<p>I approach my work from all angles and try to bring out the best of the project at hand, all while keeping in mind who the project is <i>by</i> and who the project is <i>for</i>. If you have a project for me, <a href="mailto:sethuraman.h@gmail.com">drop in a mail</a> and I’ll send in my portfolio with works that shows best how I can be of help to you.</p>
+</nav>
+	</main>
 
-				<p>Let’s take it from there :)</p>
-				
-				<p>Ram | <a href="mailto:sethuraman.h@gmail.com">ram@ramanaya.net</a></p>
-			
-		</nav>
+		<div id="bio">
+			<p>I approach my work from all angles and try to bring out the best of the project at hand, all while keeping in mind who the project is <i>by</i> and who the project is <i>for</i>. <br>If you have a project for me, <a href="mailto:sethuraman.h@gmail.com">drop in a mail</a> and I’ll send in my portfolio with works that shows best how I can be of help to you.—</p>
+			<p>Let’s take it from there :)</p>
+			<p>Ram | <a href="mailto:sethuraman.h@gmail.com">ram@ramanaya.net</a> |
+			<a href="https://www.instagram.com/raamanaya/">Instagram</a> | <a href="https://www.youtube.com/channel/UCUGwSSzDtLusBeigGUcYBaw?view_as=subscriber"> YouTube</p>
+
+		</div>
+
 		<div id="bottom-1">
-			<p style="color:rgb(25, 0, 255);"> <a href="https://www.instagram.com/raamanaya/">Instagram</a> | <a href="https://www.youtube.com/channel/UCUGwSSzDtLusBeigGUcYBaw?view_as=subscriber"> YouTube </a> <br>Typeset in IBM Plex Mono. Copyleft 2020. <br> Made with &#9829 in Kochi.</p>
+			<p style="color:rgb(25, 0, 255);"> Typeset in IBM Plex Mono. Copyleft 2020. Made with &#9829 in Kochi.</p>
 		  </div>
+
 		
 
-	</main>
+	
 	<!--script src="https://tympanus.net/codrops/adpacks/cda.js"></script-->
 </body>
 
