--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="no-js">
 
 <head>
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="favicon.ico">
