--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 			<p>I approach my work from all angles and try to bring out the best of the project at hand, all while keeping in mind who the project is <i>by</i> and who the project is <i>for</i>. <br>If you have a project for me, <a href="mailto:sethuraman.h@gmail.com">drop in a mail</a> and I’ll send in my portfolio with works that shows best how I can be of help to you.</p>
 			<p>Let’s take it from there :)</p>
 			<p>Ram | <a href="mailto:sethuraman.h@gmail.com">ram@ramanaya.net</a> |
-			<a href="https://www.instagram.com/raamanaya/">Instagram</a> | <a href="https://www.youtube.com/channel/UCUGwSSzDtLusBeigGUcYBaw?view_as=subscriber"> YouTube</p>
+			<a href="https://www.instagram.com/raamanaya/">Instagram</a> | <a href="https://www.youtube.com/channel/UCUGwSSzDtLusBeigGUcYBaw?view_as=subscriber"> YouTube</a></p>
 
 		</div>
 
 		<div id="bottom-1">
-			<p style="color:rgb(25, 0, 255);"> Typeset in IBM Plex Mono. Copyleft 2020. Made with &#9829 in Kochi.</p>
+			<p style="color:rgb(25, 0, 255);"> Typeset in IBM Plex Mono. Copyleft 2020. <br>Made with &#9829 in Kochi.</p>
 		  </div>
 
 		
