--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</main>
 
 		<div id="bio">
-			<p>I approach my work from all angles and try to bring out the best of the project at hand, all while keeping in mind who the project is <i>by</i> and who the project is <i>for</i>. <br>If you have a project for me, <a href="mailto:sethuraman.h@gmail.com">drop in a mail</a> and I’ll send in my portfolio with works that shows best how I can be of help to you.</p>
+			<p>I approach my work from all angles and try to bring out the best of the project at hand, all while keeping in mind who the project is <i>by</i> and who the project is <i>for</i>. <br>If you have a project for me, <a href="mailto:sethuraman.h@gmail.com">drop in a mail</a> and I’ll send in my portfolio with work that shows best how I can be of help to you.</p>
 			<p>Let’s take it from there :)</p>
 			<p>Ram | <a href="mailto:sethuraman.h@gmail.com">ram@ramanaya.net</a> |
 			<a href="https://www.instagram.com/raamanaya/">Instagram</a> | <a href="https://www.youtube.com/channel/UCUGwSSzDtLusBeigGUcYBaw?view_as=subscriber"> YouTube</a></p>
