--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
 
 <body class="demo-1">
+	
+	 <div class="flier">
+      <img src="img/Corona.png" alt="Kalari" style="max-width:200px;width:100%;">
+    </div>
+	
 	<main>
 	<nav class="menu">
 			
