--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div id="bio">
 			<p>I approach my work from all angles and try to bring out the best of the project at hand, all while keeping in mind who the project is <i>by</i> and who the project is <i>for</i>. <br>If you have a project for me, <a href="mailto:sethuraman.h@gmail.com">drop in a mail</a> and I’ll send in my portfolio with work that shows best how I can be of help to you.</p>
 			<p>Let’s take it from there :)</p>
-			<p>Ram | <a href="mailto:sethuraman.h@gmail.com">Mail</a> |
+			<p>Ram | 
 			<a href="https://www.instagram.com/raamanaya/">Instagram</a> | <a href="https://www.youtube.com/channel/UCUGwSSzDtLusBeigGUcYBaw?view_as=subscriber"> YouTube</a></p>
 
 		</div>
@@ -80,7 +80,8 @@
 		
 
 	
-	<!--script src="https://tympanus.net/codrops/adpacks/cda.js"></script-->
+	<!--Last Updated on 26th August 2020
+		CSS Animation help taken from https://tympanus.net/codrops/2020/03/31/css-only-marquee-effect/-->
 </body>
 
 </html>
